<resources>
    <string name="app_name">虾运</string>
    <string name="home_page">首页</string>
    <string name="find_page">发现</string>
    <string name="shop_car_page">购物袋</string>
    <string name="my_center_page">我的</string>
    <string name="good_text_name">洪湖余家码头麻辣小龙虾900克油焖极品大虾...</string>
    <string name="home_foot_good_name">红小厨香甜麻辣小龙虾600克...</string>
    <string name="the_text_specifications">900g/盒</string>
    <string name="the_text_shop_name">洪湖湿地龙虾</string>
    <string name="LoadingController_loading_message">加载中...</string>
    <string name="LoadingController_network_error_message">加载失败，请检查网络连接~</string>
    <string name="LoadingController_error_message">加载失败，点击重试~</string>
    <string name="LoadingController_error_retry">重新加载</string>
    <string name="not_have_data">暂无数据</string>
    <string name="wuhan_city">武汉市</string>
    <string name="please_edit_key_words">请输入关键字</string>
    <string name="Membership_list">会员优惠榜单</string>
    <string name="member_sign_in">会员签到</string>
    <string name="member_sign_in_get_money">会员签到领现金</string>
    <string name="New_red_envelopes">新手红包</string>
    <string name="not_get_red_envelopes">您有未领取红包</string>
    <string name="Detonation_model_of_seconds_kill">爆品秒杀</string>
    <string name="Snap_up_in">抢购中</string>
    <string name="Is_about_to_begin">即将开始</string>
    <string name="Value_selling">超值热卖</string>
    <string name="the_price">¥ %s</string>
    <string name="the_price_two">-¥ %s</string>
    <string name="Limited_time_discount">限时折扣</string>
    <string name="Full_reduction">满%1$s减%2$s</string>
    <string name="members">会员</string>
    <string name="The_postage_money">邮费%s</string>
    <string name="Accumulation">累计优惠</string>
    <string name="total_money">%s 元</string>
    <string name="have_sold">已售%s份</string>
    <string name="The_quality_of_the_optimization">品质优选</string>
    <string name="To_view_more">查看更多</string>
    <string name="the_login">登录</string>
    <string name="WeChat_authorizes_login">微信授权登录</string>
    <string name="Mobile_phone_number_login">手机号码登录</string>
    <string name="Log_in_to_synchronize_WeChat_account_data">登录同步微信账号数据</string>
    <string name="Bind_mobile_phone_number">绑定手机号码</string>
    <string name="please_edit_phone_number">请输入手机号</string>
    <string name="Get_the_verification_code">获取验证码</string>
    <string name="Once_again">再次获取</string>
    <string name="please_edit_verification_code">请输入验证码</string>
    <string name="The_binding">绑定</string>
    <string name="Experience_immediately">立即体验</string>
    <string name="Press_exit_procedure_again">再按一次退出程序</string>
    <string name="cancel">取消</string>
    <string name="Search_history">历史搜索</string>
    <string name="delete">删除</string>
    <string name="Top_search">热门搜索</string>
    <string name="The_default">默认</string>
    <string name="sales_number">销量</string>
    <string name="price">价格</string>
    <string name="search">搜索</string>
    <string name="Sign_in_for_cash">签到领取现金</string>
    <string name="withdrawal_money">%1$前提现了%2$s元</string>
    <string name="Sign_for_cash">签到领现金</string>
    <string name="Already_signed_in">已签到</string>
    <string name="today">今天</string>
    <string name="Tomorrow">明天</string>
    <string name="The_day_after_tomorrow">后天</string>
    <string name="Withdrawal_way">提现方式</string>
    <string name="Activity_rules">活动规则</string>
    <string name="the_price_text">元</string>
    <string name="More_ways_to_make_money_will_open_up">更多赚钱方式即将开放</string>
    <string name="Check_in_successfully_get_money">签到成功,获得%s元</string>
    <string name="Random_amount_sign_in_payment">随机金额签到金</string>
    <string name="Three_days_in_row_plus_bonus">连续签到3天还有额外签到奖励</string>
    <string name="Share_immediately">立即分享</string>
    <string name="I_know_the">我知道了</string>
    <string name="Share_WeChat_receive_the_above_reward">分享到微信可获得以上奖励</string>
    <string name="The_withdrawal_subsidiary">提现明细</string>
    <string name="Sign_in_gold">+%s元</string>
    <string name="Sign_in_gold_two">-%s元</string>
    <string name="withdrawal_subsidiary_two">%1$s元(%2$s)</string>
    <string name="Withdrawal_zone">提现专区</string>
    <string name="Cash_balance">签到金余额:</string>
    <string name="To_exchange_gifts">兑换好礼</string>
    <string name="Sign_in_gold_money">%s元签到金</string>
    <string name="Full_availability">满%s可用</string>
    <string name="New_exclusive">新人专享</string>
    <string name="His_general">全场通用</string>
    <string name="Validity_delay_time">有效期至返券后%s天内</string>
    <string name="Immediately_to_receive">立即领取</string>
    <string name="Place_the_order_or_return">下单即返</string>
    <string name="coupons_money">元 优 惠 券</string>
    <string name="coupons_money_two">元优惠券</string>
    <string name="who_get_money_of_date">%1$s在%2$s前提现了%3$s元</string>
    <string name="Add_the_shopping_bag">加入购物袋</string>
    <string name="Buy_now">立即购买</string>
    <string name="Customer_service">客服</string>
    <string name="Shopping_bags">购物袋</string>
    <string name="The_original_price">原价</string>
    <string name="Timed_promotions">限时促销</string>
    <string name="Distance_end_time">距%s结束剩:</string>
    <string name="Distance_start_time">距%s开始剩:</string>
    <string name="Member_of_the_exclusive">会员专享</string>
    <string name="Open_membership_now">立即开通会员</string>
    <string name="Check_the_details">查看详情</string>
    <string name="Get_commission_sharing_product">分享销售此产品最多可获得佣金</string>
    <string name="Sales_promotion">促销</string>
    <string name="distribution">配送</string>
    <string name="Package_mail">包邮</string>
    <string name="The_distribution_address">至</string>
    <string name="Purchase_quantity">购买数量</string>
    <string name="The_quantity_inventory">库存%s件</string>
    <string name="Goods_details">商品详情</string>
    <string name="About_the_commission_difference">关于佣金差异</string>
    <string name="About_the_commission_payment">关于佣金发放</string>
    <string name="brand_name">品牌</string>
    <string name="Shelf_life">保质期</string>
    <string name="origin_name">产地</string>
    <string name="specifications">规格</string>
    <string name="Delivery_information">快递信息</string>
    <string name="The_service_information">服务信息</string>
    <string name="Storage_conditions">贮存条件</string>
    <string name="taste">口味</string>
    <string name="select_city">选择城市</string>
    <string name="Future_generations">全选</string>
    <string name="To_settle_accounts">去结算</string>
    <string name="combined">合计:</string>
    <string name="shop_car_bag">购物袋</string>
    <string name="The_editor">编辑</string>
    <string name="complete">完成</string>
    <string name="Guess_you_like">猜你喜欢</string>
    <string name="The_consignee">收货人:%s</string>
    <string name="The_consignee_three">收 货 人:%s</string>
    <string name="Shipping_address">收货地址:%s</string>
    <string name="The_shipping_address_is_not_filled_in">亲,你还没有填写收货地址哦,\n赶快点击添加吧>></string>
    <string name="Total_amount">合计金额:</string>
    <string name="the_total_money">¥ %s元</string>
    <string name="Submit_orders">提交订单</string>
    <string name="Make_sure_the_order">确认订单</string>
    <string name="My_commission">我的佣金</string>
    <string name="Directions_for_use">使用说明</string>
    <string name="The_account_balance">账户余额</string>
    <string name="Payment_details">收支明细</string>
    <string name="withdrawal">提现</string>
    <string name="Use_rules">使用规则</string>
    <string name="Set_the_commission_payment_password">设置佣金支付密码</string>
    <string name="change_the_commission_payment_password">重置佣金支付密码</string>
    <string name="Set_the_password">设置密码:</string>
    <string name="Input_again">再次输入:</string>
    <string name="Six_figures">6位数字</string>
    <string name="determine">确定</string>
    <string name="Forget_the_original_password">忘记原始密码?</string>
    <string name="The_total_amount_of_goods">商品总额</string>
    <string name="The_freight_in_total">运费总计</string>
    <string name="Preferential_activities">活动特惠</string>
    <string name="the_coupons">优惠券</string>
    <string name="Open_the_member_to_enjoy_the_discount">开通Plus会员,全场8折起,此商品还可节约25元</string>
    <string name="In_distribution">配送方式</string>
    <string name="Buyer_message">买家留言:</string>
    <string name="Message_prompt">选填:请填写订单备注信息</string>
    <string name="Delete_the_goods">删除商品</string>
    <string name="Delete_the_shrimp_remember">删除虾记</string>
    <string name="Full_reduction_text">满减</string>
    <string name="Visit_again">再逛逛</string>
    <string name="To_gather_together_the_single">去凑单</string>
    <string name="shop_car_good_hit_message_one">购满%1$s元,可减%2$s元,还差%3$s元</string>
    <string name="shop_car_good_hit_message_two">已购满%1$s元,已减%2$s元</string>
    <string name="Personal_center">个人中心</string>
    <string name="My_collection">我的收藏</string>
    <string name="My_footprint">我的足迹</string>
    <string name="Registered_members">注册用户</string>
    <string name="Plus_member">Plus会员</string>
    <string name="My_order">我的订单</string>
    <string name="To_be_paid">待支付</string>
    <string name="For_the_payment">待付款</string>
    <string name="To_send_the_goods">待发货</string>
    <string name="For_the_goods">待收货</string>
    <string name="the_refund">退款</string>
    <string name="all_the_orders">全部订单</string>
    <string name="The_deal">交易成功</string>
    <string name="Transaction_failure">交易失败</string>
    <string name="Commonly_used_tools">常用工具</string>
    <string name="My_coupons">我的优惠券</string>
    <string name="Coupons_available">可用优惠券(%s)</string>
    <string name="Not_available_coupons">不可用优惠券(%s)</string>
    <string name="The_period_of_validity">有效期:%s</string>
    <string name="the_empty">清空</string>
    <string name="Are_you_sure_you_want_to_clear_all_records">确定要清空所有足迹吗?</string>
    <string name="my_Shipping_address">收货地址</string>
    <string name="save">保存</string>
    <string name="Head_portrait">头像</string>
    <string name="nickname">昵称</string>
    <string name="gender">性别</string>
    <string name="local_address">常住地</string>
    <string name="birthday">生日</string>
    <string name="The_signature">签名</string>
    <string name="Did_not_fill_in">未填写</string>
    <string name="My_profile">我的资料</string>
    <string name="Individuality_signature">个性签名</string>
    <string name="Personalized_signature_prompt">个性签名可以让别人更想了解你哦</string>
    <string name="Set_up_the">设置</string>
    <string name="About_us">关于我们</string>
    <string name="Clear_the_cache">清除缓存</string>
    <string name="Commission_payment_password">佣金支付密码</string>
    <string name="Has_been_set">已设置</string>
    <string name="Has_been_not_set">未设置</string>
    <string name="Log_out">退出登录</string>
    <string name="Are_you_sure_you_want_to_exit_your_current_account">确定要退出当前账号吗?</string>
    <string name="The_new_address">新增地址</string>
    <string name="Amount_of_real_pay">实付金额</string>
    <string name="The_order_no">订单编号: %s</string>
    <string name="Creation_time">创建时间: %s</string>
    <string name="Time_of_payment">付款时间: %s</string>
    <string name="The_delivery_time">发货时间: %s</string>
    <string name="Clinch_deal_the_time">成交时间: %s</string>
    <string name="Alipay_transaction_number">支付宝交易号: %s</string>
    <string name="copy">复制</string>
    <string name="Reasons_for_choosing_refund">选择退款原因</string>
    <string name="Take_the_wrong_goods">拍错商品</string>
    <string name="Don_want_to_buy_the">不想买了</string>
    <string name="Goods_out_of_stock">商品缺货</string>
    <string name="Other_reasons">其他原因</string>
    <string name="Problem_description">问题描述</string>
    <string name="The_refund_amount">退款金额</string>
    <string name="optional">选填(不超过50个字符)</string>
    <string name="Number_of_applications">申请数量</string>
    <string name="Please_enter_user_name">请输入昵称</string>
    <string name="Modify_the_nickname">修改昵称</string>
    <string name="Commission_differences_one">1.分享给会员购买,最多可获得¥%s</string>
    <string name="Commission_differences_two">2.分享给非会员(包括未注册用户)购买,最多可获得¥%s</string>
    <string name="Commission_issued">佣金在用户购买下单并确定收货7天后发放至您的佣金账户中。</string>
</resources>