<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <View
        android:id="@+id/fake_status_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <include layout="@layout/include_titlebar_layout" />

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/smartRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">


        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:scrollbars="none">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">


                <include layout="@layout/include_order_status_layout" />

                <include layout="@layout/include_order_details_address_layout" />

                <View style="@style/DivideLIneStyleOf12dp" />

                <include layout="@layout/include_recyclerview_layout" />

                <View style="@style/DivideLineStyle" />


                <RelativeLayout style="@style/RelativeLayoutStyleOf44dp">

                    <TextView
                        style="@style/TextViewStyleOf14Sp"
                        android:layout_centerVertical="true"
                        android:text="@string/Amount_of_real_pay"
                        android:textColor="@color/color_3f3f3f_black" />


                    <TextView
                        android:id="@+id/tv_Amount_of_real_pay_money"
                        style="@style/TextViewStyleOf14Sp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/the_total_money"
                        android:textColor="@color/color_f3683f"
                        android:textSize="@dimen/tv_16sp" />
                </RelativeLayout>

                <View style="@style/DivideLIneStyleOf12dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_16"
                    android:layout_marginRight="@dimen/spacing_16"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/rl_that_order_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_8">

                        <TextView
                            android:id="@+id/tv_The_order_no"
                            style="@style/TextViewStyleOf14Sp"
                            android:layout_centerVertical="true"
                            android:text="@string/The_order_no"
                            android:textSize="@dimen/tv_13sp" />

                        <TextView
                            android:id="@+id/tv_copy_The_order_no"
                            android:layout_width="@dimen/spacing_44"
                            android:layout_height="@dimen/spacing_20"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:background="@drawable/shape_copy_order_number_grey_background"
                            android:gravity="center"
                            android:text="@string/copy"
                            android:textColor="@color/color_9f9f9f_black"
                            android:textSize="@dimen/tv_11sp" />

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/tv_Alipay_transaction_number"
                        style="@style/TextViewStyleOf14Sp"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="@dimen/spacing_8"
                        android:text="@string/Alipay_transaction_number"
                        android:textSize="@dimen/tv_13sp" />

                    <TextView
                        android:id="@+id/tv_Creation_time"
                        style="@style/TextViewStyleOf14Sp"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="@dimen/spacing_8"
                        android:text="@string/Creation_time"
                        android:textSize="@dimen/tv_13sp" />

                    <TextView
                        android:id="@+id/tv_Time_of_payment"
                        style="@style/TextViewStyleOf14Sp"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="@dimen/spacing_8"
                        android:text="@string/Time_of_payment"
                        android:textSize="@dimen/tv_13sp" />

                    <TextView
                        android:id="@+id/tv_The_delivery_time"
                        style="@style/TextViewStyleOf14Sp"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="@dimen/spacing_8"
                        android:text="@string/The_delivery_time"
                        android:textSize="@dimen/tv_13sp" />

                    <TextView
                        android:id="@+id/tv_Clinch_deal_the_time"
                        style="@style/TextViewStyleOf14Sp"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="@dimen/spacing_8"
                        android:text="@string/Clinch_deal_the_time"
                        android:textSize="@dimen/tv_13sp" />

                </LinearLayout>

                <View
                    style="@style/DivideLIneStyleOf12dp"
                    android:layout_marginTop="@dimen/spacing_8" />
            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

    <include layout="@layout/include_order_status_bottom_layout" />

</LinearLayout>