<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@drawable/shape_white_5dp_background"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_dialog_title"
        style="@style/TextViewStyleOf14Sp"
        android:layout_height="@dimen/spacing_30"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/spacing_10"
        android:text="@string/Modify_the_nickname"
        android:textColor="@color/color_3f3f3f_black"
        android:textSize="@dimen/tv_15sp" />

    <EditText
        android:id="@+id/edit_nickname"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_40"
        android:layout_marginLeft="@dimen/spacing_10"
        android:background="@null"
        android:hint="@string/Please_enter_user_name"
        android:paddingLeft="@dimen/spacing_10"
        android:singleLine="true"
        android:textColor="@color/color_666"
        android:textColorHint="@color/color_999"
        android:textCursorDrawable="@color/color_666"
        android:textSize="@dimen/tv_13sp" />

    <View style="@style/DivideLineStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_40"
        android:layout_margin="@dimen/spacing_5"
        android:orientation="horizontal">

        <Button
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/color_9f9f9f"
            android:textSize="@dimen/tv_16sp" />

        <View
            android:layout_width="@dimen/spacing_0.5"
            android:layout_height="@dimen/spacing_30"
            android:layout_gravity="center"
            android:background="#E0E0E0" />

        <Button
            android:id="@+id/tv_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:text="@string/determine"
            android:textColor="@color/color_e53d3d"
            android:textSize="@dimen/tv_16sp" />
    </LinearLayout>
</LinearLayout>
